# uubed-py

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CONVERSATION_SUMMARY.md  GEMINI.md  Makefile  PLAN.md  README.md  SEMVERSIONING_IMPLEMENTATION.md  TODO.md  build.sh  llms.txt  pyproject.toml  setup.py  test-results.xml
.github/workflows/: ci.yml  push.yml  release.yml  test.yml
.specstory/: .what-is-this.md
benchmarks/: bench_encoders.py
issues/: 101.txt  102.txt
notebooks/: 01_basic_usage.ipynb  02_streaming_api.ipynb  03_langchain_integration.ipynb  README.md
scripts/: benchmark.py  build.py  build_and_test.py  performance_profile_report.json  prepare_release.py  profile_hotpaths.py  profile_memory.py  profile_performance.py  release.py  run_tests.py  test.py  test_config.toml  test_package.py  test_runner.py
src/uubed/: __init__.py  __init__.pyi  __version__.py  api.py  api.pyi  cli.py  config.py  exceptions.py  gpu.py  matryoshka.py  native_wrapper.py  streaming.py  streaming.pyi  uubed.py  validation.py
src/uubed/encoders/: __init__.py  eq64.py  mq64.py  q64.py  shq64.py  t8q64.py  zoq64.py
src/uubed/integrations/: __init__.py  langchain.py  vectordb.py
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_api.py  test_cli.py  test_config.py  test_encoders.py  test_error_handling.py  test_integrations.py  test_native_wrapper.py  test_package.py  test_streaming.py  test_validation.py
